@@ -50,26 +50,26 @@ public class CustomObjectMapperTest {
 	}
 
 	private void assertDemographicInfo(DemographicInfo demographicInfo) {
-		assertEquals(demographicInfoDTO.getIdentity().getDateOfBirth().getValue(),
-				demographicInfo.getIdentity().getDateOfBirth().getValue());
-		assertEquals(demographicInfoDTO.getIdentity().getGender().getValues().getFirst().getValue(),
-				demographicInfo.getIdentity().getGender().getValues().getFirst().getValue());
-		assertEquals(demographicInfoDTO.getIdentity().getAddressLine1().getValues().getFirst().getValue(),
-				demographicInfo.getIdentity().getAddressLine1().getValues().getFirst().getValue());
-		assertEquals(demographicInfoDTO.getIdentity().getAddressLine2().getValues().getFirst().getValue(),
-				demographicInfo.getIdentity().getAddressLine2().getValues().getFirst().getValue());
-		assertEquals(demographicInfoDTO.getIdentity().getAddressLine3().getValues().getFirst().getValue(),
-				demographicInfo.getIdentity().getAddressLine3().getValues().getFirst().getValue());
-		assertEquals(demographicInfoDTO.getIdentity().getRegion().getValues().getFirst().getValue(),
-				demographicInfo.getIdentity().getRegion().getValues().getFirst().getValue());
-		assertEquals(demographicInfoDTO.getIdentity().getProvince().getValues().getFirst().getValue(),
-				demographicInfo.getIdentity().getProvince().getValues().getFirst().getValue());
-		assertEquals(demographicInfoDTO.getIdentity().getCity().getValues().getFirst().getValue(),
-				demographicInfo.getIdentity().getCity().getValues().getFirst().getValue());
-		assertEquals(demographicInfoDTO.getIdentity().getEmail().getValue(),
-				demographicInfo.getIdentity().getEmail().getValue());
-		assertEquals(demographicInfoDTO.getIdentity().getPhone().getValue(),
-				demographicInfo.getIdentity().getPhone().getValue());
+		assertEquals(demographicInfoDTO.getIdentity().getDateOfBirth(),
+				demographicInfo.getIdentity().getDateOfBirth());
+		assertEquals(demographicInfoDTO.getIdentity().getGender().get(0).getValue(),
+				demographicInfo.getIdentity().getGender().get(0).getValue());
+		assertEquals(demographicInfoDTO.getIdentity().getAddressLine1().get(0).getValue(),
+				demographicInfo.getIdentity().getAddressLine1().get(0).getValue());
+		assertEquals(demographicInfoDTO.getIdentity().getAddressLine2().get(0).getValue(),
+				demographicInfo.getIdentity().getAddressLine2().get(0).getValue());
+		assertEquals(demographicInfoDTO.getIdentity().getAddressLine3().get(0).getValue(),
+				demographicInfo.getIdentity().getAddressLine3().get(0).getValue());
+		assertEquals(demographicInfoDTO.getIdentity().getRegion().get(0).getValue(),
+				demographicInfo.getIdentity().getRegion().get(0).getValue());
+		assertEquals(demographicInfoDTO.getIdentity().getProvince().get(0).getValue(),
+				demographicInfo.getIdentity().getProvince().get(0).getValue());
+		assertEquals(demographicInfoDTO.getIdentity().getCity().get(0).getValue(),
+				demographicInfo.getIdentity().getCity().get(0).getValue());
+		assertEquals(demographicInfoDTO.getIdentity().getEmail(),
+				demographicInfo.getIdentity().getEmail());
+		assertEquals(demographicInfoDTO.getIdentity().getPhone(),
+				demographicInfo.getIdentity().getPhone());
 	}
 
 }
